--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -189,16 +189,10 @@ jobs:
                   mkdir -p ~/.ssh
                   ssh-keyscan -H ${{env.SERVER_HOST}} >> ~/.ssh/known_hosts
 
-                  if [ 0 -eq 1 ]; then
-                      output=$(ssh -p ${{env.SERVER_SSH_PORT}} -i $keyfile_path ${{env.SERVER_USER}}@${{env.SERVER_HOST}} "
-                      ${{ secrets.SERVER_PRIVATE_KEY }}
-                      ")
-                      echo "output=$output" >> "$GITHUB_OUTPUT"
-                  else
-                      ssh -p ${{env.SERVER_SSH_PORT}} -i $keyfile_path ${{env.SERVER_USER}}@${{env.SERVER_HOST}} "
-                          ${{ secrets.SERVER_PRIVATE_KEY }}
-                      "
-                  fi
+                  ssh -p ${{env.SERVER_SSH_PORT}} -i $keyfile_path ${{env.SERVER_USER}}@${{env.SERVER_HOST}} "
+                      latest_file=$(ls ${{ env.SERVER_BACKUP_PATH }} | grep -E '${{env.SERVER_ODOO_DB_NAME}}_[0-9]{4}-[0-9]{2}-[0-9]{2}_[0-9]{2}-[0-9]{2}-[0-9]{2}\.zip' | sort -r | head -n 1)
+                      echo $latest_file                  
+                  "
 
             - name: Get the latest backup file path on server
               id: get-latest-backup-file
