--- a/.github/actions/ssh-script/action.yml
+++ b/.github/actions/ssh-script/action.yml
@@ -36,8 +36,10 @@ runs:
                 touch $key_file_path && chmod 600 $key_file_path
                 >$key_file_path
                 echo "$content" >>$key_file_path
-                echo $key_file_path
               }          
+
+              # fixme: remove unused lines
+
 
               keyfile_path=${{ github.workspace }}/$(date +%s)_key
 
