--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -78,71 +78,70 @@ env:
     INPUT_COMMIT_SHA: ${{inputs.commit_sha}}
 
 jobs:
-    #fixme: uncomment two test steps
-    # unit-test-at-install:
-    #     name: ${{inputs.repo_name}} - Unit test at install
-    #     runs-on: ubuntu-latest
-    #     environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
-    #     if: inputs.action == 'test' || inputs.action == 'deploy'
-    #     steps:
-    #         - uses: actions/checkout@v4
+    unit-test-at-install:
+        name: ${{inputs.repo_name}} - Unit test at install
+        runs-on: ubuntu-latest
+        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        if: inputs.action == 'test' || inputs.action == 'deploy'
+        steps:
+            - uses: actions/checkout@v4
 
-    #         - name: Create Check Run
-    #           uses: ./.github/actions/create-check-run
-    #           id: create-check-run
-    #           with:
-    #               name: "Unit test at install"
+            - name: Create Check Run
+              uses: ./.github/actions/create-check-run
+              id: create-check-run
+              with:
+                  name: "Unit test at install"
 
-    #         - name: Test Preparation
-    #           uses: ./.github/actions/test-preparation
+            - name: Test Preparation
+              uses: ./.github/actions/test-preparation
 
-    #         - name: Run Unit test cases
-    #           id: run_at_install_unit_test
-    #           run: |
-    #               bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
+            - name: Run Unit test cases
+              id: run_at_install_unit_test
+              run: |
+                  bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
-    #         - name: Update Check Run
-    #           uses: ./.github/actions/update-check-run
-    #           if: ${{always()}}
-    #           id: update-check-run
-    #           with:
-    #               check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
-    #               conclusion: ${{ steps.run_at_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
+            - name: Update Check Run
+              uses: ./.github/actions/update-check-run
+              if: ${{always()}}
+              id: update-check-run
+              with:
+                  check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
+                  conclusion: ${{ steps.run_at_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
 
-    # unit-test-post-install:
-    #     name: ${{inputs.repo_name}} - Unit test post install
-    #     runs-on: ubuntu-latest
-    #     environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
-    #     if: inputs.action == 'test' || inputs.action == 'deploy'
-    #     steps:
-    #         - uses: actions/checkout@v4
+    unit-test-post-install:
+        name: ${{inputs.repo_name}} - Unit test post install
+        runs-on: ubuntu-latest
+        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        if: inputs.action == 'test' || inputs.action == 'deploy'
+        steps:
+            - uses: actions/checkout@v4
 
-    #         - name: Create Check Run
-    #           uses: ./.github/actions/create-check-run
-    #           id: create-check-run
-    #           with:
-    #               name: "Unit test post install"
+            - name: Create Check Run
+              uses: ./.github/actions/create-check-run
+              id: create-check-run
+              with:
+                  name: "Unit test post install"
 
-    #         - name: Test Preparation
-    #           uses: ./.github/actions/test-preparation
+            - name: Test Preparation
+              uses: ./.github/actions/test-preparation
 
-    #         - name: Run Unit test cases
-    #           id: run_post_install_unit_test
-    #           run: |
-    #               bash $CICD_SCRIPTS_PATH/run-unit-test.sh "post_install"
+            - name: Run Unit test cases
+              id: run_post_install_unit_test
+              run: |
+                  bash $CICD_SCRIPTS_PATH/run-unit-test.sh "post_install"
 
-    #         - name: Update Check Run
-    #           uses: ./.github/actions/update-check-run
-    #           if: ${{always()}}
-    #           id: update-check-run
-    #           with:
-    #               check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
-    #               conclusion: ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
+            - name: Update Check Run
+              uses: ./.github/actions/update-check-run
+              if: ${{always()}}
+              id: update-check-run
+              with:
+                  check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
+                  conclusion: ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
 
     integration-test:
         name: ${{inputs.repo_name}} - Integration test
         runs-on: ubuntu-latest
-        # fixme: uncomment if condition
+        # fixme: uncomment if
         # if: inputs.action == 'deploy'
 
         environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
@@ -185,7 +184,7 @@ jobs:
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
                   set-output: 1
                   script: |
-                      latest_file=\$(ls ${{ env.SERVER_BACKUP_PATH }} | grep -E '${{env.SERVER_ODOO_DB_NAME}}_[0-9]{4}-[0-9]{2}-[0-9]{2}_[0-9]{2}-[0-9]{2}-[0-9]{2}\.zip' | sort -r | head -n 1)
+                      latest_file=\$(ls ${{ env.SERVER_BACKUP_PATH }} | grep -E '${{env.SERVER_ODOO_DB_NAME}}_a[0-9]{4}-[0-9]{2}-[0-9]{2}_[0-9]{2}-[0-9]{2}-[0-9]{2}\.zip' | sort -r | head -n 1)
                       if [[ -n \$latest_file ]]; then
                         echo ${{ env.SERVER_BACKUP_PATH }}/\$latest_file
                       fi
@@ -194,8 +193,10 @@ jobs:
               if: ${{ env.NEED_NEW_SERVER_BACKUP_FILE == 0 }}
               run: |
                   latest_backup_file_path=${{ steps.get-latest-backup-file.outputs.script-output }}
-                  if [[ -n "$latest_backup_file_path" && ${{ env.GITHUB_RUN_ATTEMPT }} == 1 ]]; then
+                  if [[ -n "$latest_backup_file_path" ]]; then
                     echo "SERVER_LATEST_BACKUP_FILE_PATH=$latest_backup_file_path" >> $GITHUB_ENV
+                  else
+                    echo "NEED_NEW_SERVER_BACKUP_FILE=1" >> $GITHUB_ENV
                   fi
 
             - name: Upload backup script file to server
@@ -246,60 +247,60 @@ jobs:
                   check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
                   conclusion: ${{ steps.run_integration_test.conclusion == 'success' && 'success' || 'failure' }}
 
-    # deploy-server:
-    #     name: ${{inputs.repo_name}} - Deploy server
-    #     runs-on: ubuntu-latest
-    #     environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
-    #     needs: [unit-test-at-install, unit-test-post-install, integration-test]
-    #     steps:
-    #         - uses: actions/checkout@v4
+    deploy-server:
+        name: ${{inputs.repo_name}} - Deploy server
+        runs-on: ubuntu-latest
+        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        needs: [unit-test-at-install, unit-test-post-install, integration-test]
+        steps:
+            - uses: actions/checkout@v4
 
-    #         - name: Create Check Run
-    #           uses: ./.github/actions/create-check-run
-    #           id: create-check-run
-    #           with:
-    #               name: "Deploy to Server"
+            - name: Create Check Run
+              uses: ./.github/actions/create-check-run
+              id: create-check-run
+              with:
+                  name: "Deploy to Server"
 
-    #         - name: "Upload deploy script file to server"
-    #           uses: ./.github/actions/scp-ssh
-    #           with:
-    #               direction: "upload"
-    #               host: ${{env.SERVER_HOST}}
-    #               port: ${{env.SERVER_SSH_PORT}}
-    #               user: ${{env.SERVER_USER}}
-    #               ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
-    #               local_file: ${{ env.CICD_SCRIPTS_PATH }}/server-deploy.sh
-    #               server_file: ${{ env.SERVER_CICD_SCRIPT_FOLDER }}
+            - name: "Upload deploy script file to server"
+              uses: ./.github/actions/scp-ssh
+              with:
+                  direction: "upload"
+                  host: ${{env.SERVER_HOST}}
+                  port: ${{env.SERVER_SSH_PORT}}
+                  user: ${{env.SERVER_USER}}
+                  ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
+                  local_file: ${{ env.CICD_SCRIPTS_PATH }}/server-deploy.sh
+                  server_file: ${{ env.SERVER_CICD_SCRIPT_FOLDER }}
 
-    #         - name: "Deploy to server"
-    #           uses: ./.github/actions/ssh-script
-    #           id: deploy_to_server
-    #           env:
-    #               SERVER_CUSTOM_ADDONS_PATH: ${{env.SERVER_DEPLOY_PATH}}/..
-    #               SERVER_CONFIG_FILE: ${{env.SERVER_DEPLOY_PATH}}/etc/odoo.conf
-    #               SERVER_DOCKER_COMPOSE_PATH: ${{env.SERVER_DEPLOY_PATH}}
-    #           with:
-    #               host: ${{env.SERVER_HOST}}
-    #               port: ${{env.SERVER_SSH_PORT}}
-    #               user: ${{env.SERVER_USER}}
-    #               ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
-    #               script: |
-    #                   bash ${{ env.SERVER_CICD_SCRIPT_FOLDER }}/server-deploy.sh "${{env.SERVER_DOCKER_COMPOSE_PATH}}" "${{env.SERVER_CUSTOM_ADDONS_PATH}}" "${{env.SERVER_CONFIG_FILE}}" "${{ env.SERVER_ODOO_URL }}" "${{ env.SERVER_ODOO_DB_NAME }}"
+            - name: "Deploy to server"
+              uses: ./.github/actions/ssh-script
+              id: deploy_to_server
+              env:
+                  SERVER_CUSTOM_ADDONS_PATH: ${{env.SERVER_DEPLOY_PATH}}/..
+                  SERVER_CONFIG_FILE: ${{env.SERVER_DEPLOY_PATH}}/etc/odoo.conf
+                  SERVER_DOCKER_COMPOSE_PATH: ${{env.SERVER_DEPLOY_PATH}}
+              with:
+                  host: ${{env.SERVER_HOST}}
+                  port: ${{env.SERVER_SSH_PORT}}
+                  user: ${{env.SERVER_USER}}
+                  ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
+                  script: |
+                      bash ${{ env.SERVER_CICD_SCRIPT_FOLDER }}/server-deploy.sh "${{env.SERVER_DOCKER_COMPOSE_PATH}}" "${{env.SERVER_CUSTOM_ADDONS_PATH}}" "${{env.SERVER_CONFIG_FILE}}" "${{ env.SERVER_ODOO_URL }}" "${{ env.SERVER_ODOO_DB_NAME }}"
 
-    #         - name: The Deploy step has failed
-    #           if: ${{ failure() }}
-    #           run: |
-    #               bash ${{env.CICD_SCRIPTS_PATH}}/post-server-deploy.sh "failed"
+            - name: The Deploy step has failed
+              if: ${{ failure() }}
+              run: |
+                  bash ${{env.CICD_SCRIPTS_PATH}}/post-server-deploy.sh "failed"
 
-    #         - name: The Deploy step has successful
-    #           if: ${{ success() }}
-    #           run: |
-    #               bash ${{env.CICD_SCRIPTS_PATH}}/post-server-deploy.sh "success"
+            - name: The Deploy step has successful
+              if: ${{ success() }}
+              run: |
+                  bash ${{env.CICD_SCRIPTS_PATH}}/post-server-deploy.sh "success"
 
-    #         - name: Update Check Run
-    #           uses: ./.github/actions/update-check-run
-    #           if: ${{always()}}
-    #           id: update-check-run
-    #           with:
-    #               check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
-    #               conclusion: ${{ steps.deploy_to_server.conclusion == 'success' && 'success' || 'failure' }}
+            - name: Update Check Run
+              uses: ./.github/actions/update-check-run
+              if: ${{always()}}
+              id: update-check-run
+              with:
+                  check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
+                  conclusion: ${{ steps.deploy_to_server.conclusion == 'success' && 'success' || 'failure' }}
