--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -141,8 +141,7 @@ jobs:
     integration-test:
         name: ${{inputs.repo_name}} - Integration test
         runs-on: ubuntu-latest
-        # fixme: uncomment if
-        # if: inputs.action == 'deploy'
+        if: inputs.action == 'deploy'
 
         environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
         env:
@@ -184,7 +183,7 @@ jobs:
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
                   set-output: 1
                   script: |
-                      latest_file=\$(ls ${{ env.SERVER_BACKUP_PATH }} | grep -E '${{env.SERVER_ODOO_DB_NAME}}_a[0-9]{4}-[0-9]{2}-[0-9]{2}_[0-9]{2}-[0-9]{2}-[0-9]{2}\.zip' | sort -r | head -n 1)
+                      latest_file=\$(ls ${{ env.SERVER_BACKUP_PATH }} | grep -E '${{env.SERVER_ODOO_DB_NAME}}_[0-9]{4}-[0-9]{2}-[0-9]{2}_[0-9]{2}-[0-9]{2}-[0-9]{2}\.zip' | sort -r | head -n 1)
                       if [[ -n \$latest_file ]]; then
                         echo ${{ env.SERVER_BACKUP_PATH }}/\$latest_file
                       fi
