add option to install addons that was not installed yet

--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -249,8 +249,7 @@ jobs:
         name: ${{inputs.repo_name}} - Deploy server
         runs-on: ubuntu-latest
         environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
-        # fixme: remove comment for needs option
-        # needs: [unit-test-at-install, unit-test-post-install, integration-test]
+        needs: [unit-test-at-install, unit-test-post-install, integration-test]
         steps:
             - uses: actions/checkout@v4
 
